--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "brackets-mustache-language",
-  "title": "Mustache Language",
-  "description": "Mustache file extension support.",
-  "homepage": "https://github.com/dbtek/brackets-mustache-language",
+  "name": "brackets-hoganjs-language",
+  "title": "HoganJS Language",
+  "description": "HoganJS file extension support.",
+  "homepage": "http://github.com/fdbustamante/brackets-hoganjs-language",
   "version": "1.0.0",
-  "author": "İsmail Demirbilek (https://twitter.com/dbtek)",
+  "author": "Federico Bustamante",
   "license": "MIT",
   "keywords": [
-    "mustache",
+    "hoganjs",
     "html",
     "language"
   ],
